--- a/node/css/styles.css
+++ b/node/css/styles.css
@@ -1,3 +1,89 @@
-.buttons {
-	display: table;
+@media screen and (orientation:portrait){
+	.grid-container {
+		position: relative;
+		width: 100%;
+		top: 0;
+		right: 0;
+		
+		display: grid;
+		grid-template-columns: 0.25fr 1fr;
+		
+		background-image: linear-gradient(to top right, #FF3F3F, #9D0000);
+	}
+	
+	.grid-child-img {
+		height: 15vw;
+		padding-top: 16%;
+		padding-left: 10%;
+		display: inline-block;
+		vertical-align: middle;
+	}
+	
+	.grid-child-text {
+		font-family: sans-serif;
+		font-size: 8vw;
+		color: white;
+		letter-spacing: 1vw;
+		padding-top: 1%;
+		padding-left: 5%;
+	}
+	
+	#table-wrapper {
+		display: flex;
+		justify-content: center;
+	}
+}
+
+@media screen and (orientation:landscape){
+	.grid-container {
+		position: relative;
+		width: 100%;
+		height: 10%;
+		top: 0;
+		right: 0;
+		
+		display: grid;
+		grid-template-columns: 0.25fr 1fr;
+		
+		background-image: linear-gradient(to top right, #FF3F3F, #9D0000);
+	}
+	
+	.grid-child-img {
+		height: 10vw;
+		padding-top: 2%;
+		padding-left: 30%;
+		display: inline-block;
+		vertical-align: middle;
+	}
+	
+	.grid-child-text {
+		font-family: sans-serif;
+		font-size: 5vw;
+		color: white;
+		letter-spacing: 1vw;
+		padding-left: 5%;
+	}
+	
+	#table-wrapper {
+		display: flex;
+		justify-content: center;
+	}	
+}
+
+button {
+	width: 100%;
+	height: 1.5em;
+	background: linear-gradient(to right, salmon, #ff8072);
+	color: salmon;
+	border: linear;
+	border-color: darkred;
+	border-width: 2px;
+	border-radius: 10%;
+}
+button:hover {
+	background: lightsalmon;
+}
+
+button:active {
+	border-width: 3px;
 }
